--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/pacman82/extract-my-file#readme",
   "devDependencies": {
+    "eslint": "^6.1.0",
     "prettier": "1.18.2"
   }
 }
