--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,54 @@
+# You must change these to your own details.
 [package]
 name = "extract-my-file"
+description = "A website using wasm to extract your file on your local machine"
 version = "0.1.0"
 authors = ["David Werner <david.werner@blue-yonder.com>","Markus Klein <markus-klein@live.de>"]
+categories = []
+readme = "README.md"
 edition = "2018"
 
 [lib]
-# Use both cdylib and rlib as targets
-# cdylib so we can than continue to convert it into webassembly using wasm-bindgen
-# rlib so we can make use of advanced native tooling during development
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
+
+[profile.release]
+# This makes the compiled code faster and smaller, but it makes compiling slower,
+# so it's only enabled in release mode.
+lto = true
+
+[features]
+# If you uncomment this line, it will enable `wee_alloc`:
+#default = ["wee_alloc"]
 
 [dependencies]
-wasm-bindgen = "0.2.47"
-libflate = "0.1.25"
+# The `wasm-bindgen` crate provides the bare minimum functionality needed
+# to interact with JavaScript.
+wasm-bindgen = "0.2.54"
+
+# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
+# compared to the default allocator's ~10K. However, it is slower than the default
+# allocator, so it's not enabled by default.
+wee_alloc = { version = "0.4.5", optional = true }
+
+# `libflate` allows us to zip and unzip files
+libflate = "0.1.27"
+
+# The `web-sys` crate allows you to interact with the various browser APIs,
+# like the DOM.
+[dependencies.web-sys]
+version = "0.3.31"
+features = ["console"]
+
+# The `console_error_panic_hook` crate provides better debugging of panics by
+# logging them with `console.error`. This is great for development, but requires
+# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
+# in debug mode.
+[target."cfg(debug_assertions)".dependencies]
+console_error_panic_hook = "0.1.6"
+
+# These crates are used for running unit tests.
+[dev-dependencies]
+wasm-bindgen-test = "0.3.4"
+futures = "0.3.1"
+js-sys = "0.3.31"
+wasm-bindgen-futures = "0.4.4"
