--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "extract-my-file",
+  "author": "You <you@example.com>",
+  "name": "rust-webpack-template",
   "version": "0.1.0",
-  "description": "A website using wasm to extract your file on your local machine",
-  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf dist pkg && webpack",
+    "start": "rimraf dist pkg && webpack-dev-server --open -d",
+    "test": "cargo test && wasm-pack test --headless"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pacman82/extract-my-file.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pacman82/extract-my-file/issues"
-  },
-  "homepage": "https://github.com/pacman82/extract-my-file#readme",
   "devDependencies": {
-    "eslint": "^6.1.0",
-    "prettier": "1.18.2"
+    "@wasm-tool/wasm-pack-plugin": "^0.4.2",
+    "copy-webpack-plugin": "^5.0.3",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1",
+    "rimraf": "^2.6.3"
   }
 }
