use filesave to stor expanded file

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
     "rimraf": "^2.6.3"
+  },
+  "dependencies": {
+    "file-saver": "^2.0.2"
   }
 }
