--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,8 @@ libflate = "0.1.27"
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
-version = "0.3.31"
-features = ["console"]
+version = "0.3.32"
+features = ["console", "File"]
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
