--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "name": "extract-my-file",
   "author": "You <you@example.com>",
-  "name": "rust-webpack-template",
   "version": "0.1.0",
   "scripts": {
     "build": "rimraf dist pkg && webpack",
@@ -9,11 +9,16 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^0.4.2",
-    "copy-webpack-plugin": "^5.0.3",
-    "webpack": "^4.33.0",
+    "css-loader": "^3.2.1",
+    "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.0",
+    "rimraf": "^2.6.3",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.1",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1",
-    "rimraf": "^2.6.3"
+    "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
     "file-saver": "^2.0.2"
