--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^3.2.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^8.0.0",
