--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ js-sys = "0.3.32"
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.32"
-features = ["console", "File", "Blob"]
+features = ["File", "Blob"]
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
